[package]
name = "DisplaySettings"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Pearu <bartekg100@gmail.com>"]
description = "Small library to manage display settings on Windows with rust"
repository = "https://github.com/PearuUu/DisplaySettings"
documentation = "https://docs.rs/DisplaySettings"
readme = "README.md"
keywords = ["Display", "windows", "Windows-settings", "winapi", "api"]
categories = ["api-bindings", "os"]
include = ["src/**/*", "README.md"]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "winnt"] }
